@@ -1,0 +1,16 @@
+nested-tables
+=============
+
+.. list-table::
+   :header-rows: 1
+
+   * - heading
+     - heading
+   * - content
+     - .. list-table::
+          :header-rows: 1
+
+          * - heading
+            - heading
+          * - content
+            - content
