@@ -21,6 +21,7 @@ Features added
 * #6910: inheritance_diagram: Make the background of diagrams transparent
 * #6446: duration: Add ``sphinx.ext.durations`` to inspect which documents slow
   down the build
+* #6837: LaTeX: Support a nested table
 
 Bugs fixed
 ----------
